# nerual

./: LICENSE  README.md  example_xor.py  orwoxNeural.py  pyproject.toml  setup.cfg  xor_model.json
.github/workflows/: workflow.yml
src/orwox_neural/activations/: __init__.py  relu.py  sigmoid.py  softmax.py  tanh.py
src/orwox_neural/core/: __init__.py  autograd.py  engine.py  graph.py  hooks.py  sequential.py
src/orwox_neural/datasets/: __init__.py  base_dataset.py  mnist_loader.py
src/orwox_neural/layers/: __init__.py  base.py  batchnorm.py  conv2d.py  dense.py  dropout.py  flatten.py
src/orwox_neural/loss/: __init__.py  cross_entropy.py  mse.py
src/orwox_neural/optim/: __init__.py  adam.py  base.py  sgd.py
src/orwox_neural/training/: __init__.py  callbacks.py  history.py  trainer.py
src/orwox_neural/utils/: __init__.py  initialization.py  preprocessing.py  serialization.py  tensor.py
src/orwox_neural/visualization/: __init__.py  export_json.py  inspector.py  timeline.py
